--- a/ClassMaterials/Makefiles/Makefile
+++ b/ClassMaterials/Makefiles/Makefile
@@ -19,3 +19,13 @@
 # Hint: for your testing, typing "touch <filename>" will make a file appear to be edited
 #
 # Bonus hint: TAB characters are required in Makefiles for indenting rules, spaces won't do the job
+all: almain.bin
+	
+almain.bin: almain.o arraylist.o
+	gcc almain.o arraylist.o -o almain.bin
+almain.o: almain.c arraylist.h
+	gcc -c almain.c -o  almain.o
+arraylist.o: arraylist.c arraylist.h
+	gcc -c  arraylist.c -o  arraylist.o
+clean:
+	rm -f *.o *.bin
